Issue IMCMS-484: Improve the menu-administration - Added aligning styles

--- a/src/main/webapp/css/grid/imcms-grid.css
+++ b/src/main/webapp/css/grid/imcms-grid.css
@@ -145,15 +145,17 @@
     width: 100%;
 }
 
-.imcms-grid-coll-13,
+.imcms-grid-coll-13 {
+    width: 25%;
+}
 .imcms-grid-coll-14 {
     width: 40%;
 }
 
 .imcms-grid-coll-15 {
-    width: 9%;
+    width: 10%;
 }
 
 .imcms-grid-coll-16 {
-    width: 20%;
+    width: 35%;
 }
