--- a/src/main/webapp/css/menu_editor/imcms-menu_list.css
+++ b/src/main/webapp/css/menu_editor/imcms-menu_list.css
@@ -18,7 +18,7 @@
 }
 
 .imcms-menu-list__titles {
-    padding: 0 27px 0 70px;
+    padding: 0 27px 0 40px;
     width: 100%;
     border-bottom: 1px solid #d3d8de;
     float: left;
